# dhvani-tts

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
database/: Makefile.am  Makefile.in  noise
database/c/: 11.gsm  12.gsm  15.gsm  20.gsm  21.gsm  23.gsm  24.gsm  25.gsm  26.gsm  27.gsm  30.gsm  33.gsm  5.gsm  9.gsm
database/cv/: 1.10.gsm  1.12.gsm  1.13.gsm.marks  1.14.gsm  1.15.gsm.marks  1.2.gsm  1.2.gsm.marks  1.4.gsm.marks  1.6.gsm  1.6.gsm.marks  10.10.gsm  10.15.gsm  10.15.gsm.marks  10.4.gsm  10.6.gsm.marks  10.8.gsm  11.10.gsm.marks  11.12.gsm  11.15.gsm  11.15.gsm.marks  11.2.gsm.marks  11.4.gsm  11.8.gsm  11.8.gsm.marks  11.9.gsm  12.10.gsm  12.12.gsm  12.12.gsm.marks  12.13.gsm  12.15.gsm.marks  12.2.gsm  12.4.gsm.marks  12.6.gsm.marks  12.8.gsm  12.8.gsm.marks  12.9.gsm  13.10.gsm  13.12.gsm  (+287 more)
dhvani/: AUTHORS  COPYING  COPYRIGHT  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  config.status.lineno  configure  configure.ac  configure.lineno  install-sh  libtool
dhvani/database/: Makefile  Makefile.in  cvoffsets  hoffsets  vcoffsets  voffsets
dhvani/database/c/: 1.gsm  10.gsm  13.gsm  14.gsm  16.gsm  17.gsm  18.gsm  19.gsm  2.gsm  22.gsm  28.gsm  29.gsm  3.gsm  31.gsm  4.gsm  6.gsm  7.gsm  8.gsm
dhvani/database/cv/: 1.10.gsm.marks  1.12.gsm.marks  1.13.gsm  1.14.gsm.marks  1.15.gsm  1.4.gsm  1.8.gsm  1.8.gsm.marks  1.9.gsm  1.9.gsm.marks  10.10.gsm.marks  10.12.gsm  10.12.gsm.marks  10.13.gsm  10.13.gsm.marks  10.14.gsm  10.14.gsm.marks  10.2.gsm  10.2.gsm.marks  10.4.gsm.marks  10.6.gsm  10.8.gsm.marks  10.9.gsm  10.9.gsm.marks  11.10.gsm  11.12.gsm.marks  11.13.gsm  11.13.gsm.marks  11.14.gsm  11.14.gsm.marks  11.2.gsm  11.4.gsm.marks  11.6.gsm  11.6.gsm.marks  11.9.gsm.marks  12.10.gsm.marks  12.13.gsm.marks  12.14.gsm  12.14.gsm.marks  12.15.gsm  (+295 more)
dhvani/database/halfs/: .25.gsm  1.25.gsm  1.26.gsm.marks  1.27.gsm  1.28.gsm  1.29.gsm  10.24.gsm.marks  10.25.gsm.marks  11.24.gsm  11.25.gsm  11.25.gsm.marks  11.28.gsm  12.24.gsm  12.25.gsm.marks  12.28.gsm  12.28.gsm.marks  13.24.gsm  13.25.gsm.marks  13.28.gsm  13.28.gsm.marks  14.24.gsm  14.24.gsm.marks  14.28.gsm.marks  16.24.gsm  16.24.gsm.marks  16.28.gsm  16.28.gsm.marks  19.25.gsm  19.25.gsm.marks  19.26.gsm.marks  19.27.gsm  19.27.gsm.marks  2.24.gsm  2.25.gsm.marks  2.26.gsm.marks  20.25.gsm  20.25.gsm.marks  20.26.gsm  20.26.gsm.marks  21.24.gsm  (+27 more)
dhvani/database/v/: 1.gsm  1.gsm.marks  13.gsm.marks  14.gsm.marks  2.gsm  2.gsm.marks  3.gsm.marks  4.gsm  4.gsm.marks  6.gsm  8.gsm.marks  9.gsm  9.gsm.marks
dhvani/database/vc/: 10.1.gsm.marks  10.10.gsm  10.12.gsm  10.12.gsm.marks  10.13.gsm.marks  10.15.gsm  10.15.gsm.marks  10.17.gsm.marks  10.18.gsm.marks  10.2.gsm.marks  10.20.gsm  10.20.gsm.marks  10.21.gsm  10.24.gsm  10.24.gsm.marks  10.25.gsm.marks  10.26.gsm  10.26.gsm.marks  10.27.gsm  10.28.gsm.marks  10.3.gsm  10.3.gsm.marks  10.30.gsm  10.31.gsm  10.31.gsm.marks  10.32.gsm  10.33.gsm  10.33.gsm.marks  10.34.gsm.marks  10.5.gsm.marks  10.6.gsm.marks  10.8.gsm  10.8.gsm.marks  10.9.gsm  12.1.gsm  12.10.gsm  12.10.gsm.marks  12.11.gsm.marks  12.12.gsm  12.12.gsm.marks  (+315 more)
dhvani/doc/: README  hindialgo
dhvani/gsm/: COPYRIGHT  Makefile
dhvani/gsm/add-test/: add_test.c
dhvani/gsm/inc/: config.h  gsm.h  private.h  proto.h  toast.h  unproto.h
dhvani/gsm/src/: add.c  code.c  debug.c  decode.c  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c  toast.c  toast_alaw.c  toast_audio.c  toast_lin.c  toast_ulaw.c
dhvani/gsm/tls/: bitter.c  sweet.c  taste.c
dhvani/gsm/tst/: cod2lin.c  cod2txt.c  gsm2cod.c  lin2cod.c  lin2txt.c
dhvani/man/: Makefile  Makefile.am  Makefile.in  dhvani.1
dhvani/python/: dhvani.py
dhvani/src/: Makefile  Makefile.am  Makefile.in  UTF8Decoder.c  UTF8Decoder.h  alsa_player.c  alsa_player.h  debug.c  debug.h  dhvani.c  dhvani.h  dhvani_lib.c  dhvani_lib.h  languages.c  languages.h  libdhvani.pc.in  oggencoder.c  oggencoder.h  phonetic_synthesizer_bn.c  phonetic_synthesizer_bn.h  phonetic_synthesizer_gu.c  phonetic_synthesizer_gu.h  phonetic_synthesizer_hi.c  phonetic_synthesizer_hi.h  phonetic_synthesizer_ka.c  phonetic_synthesizer_ka.h  phonetic_synthesizer_kn.c  phonetic_synthesizer_ml.c  phonetic_synthesizer_ml.h  phonetic_synthesizer_mr.c  phonetic_synthesizer_mr.h  phonetic_synthesizer_or.c  phonetic_synthesizer_or.h  phonetic_synthesizer_pa.c  phonetic_synthesizer_pa.h  phonetic_synthesizer_ps.c  phonetic_synthesizer_ta.c  phonetic_synthesizer_ta.h  phonetic_synthesizer_te.c  phonetic_synthesizer_te.h  (+4 more)
dhvani/src/soundtouch4c/: Makefile  Makefile.am  Makefile.in
dhvani/src/soundtouch4c/src/: soundtouch4c.cpp  soundtouch4c.h
dhvani/tdemos/: Bengali  Hindi  Kannada  Mixed  README
doc/: Tamil pronunciation.txt
gstreamer/: libglib-2.0.la  libgobject-2.0.la  libgstreamer-0.10.la  libvorbis.la  libvorbisenc.la  libz.la
man/: Makefile.in  dhvani.1
src/: CMakeLists.txt  Makefile.am  Makefile.in  Makefile.win  UTF8Decoder.c  UTF8Decoder.h  alsa_player.c  alsa_player.h  debug.c  debug.h  dhvani.c  dhvani_lib.c  dhvani_lib.h  dhvani_utils.c  dhvani_utils.h  gstplay.c  gstplay.h  languages.c  oggencoder.c  oggencoder.h  phonetic_synthesizer_bn.c  phonetic_synthesizer_gu.c  phonetic_synthesizer_hi.c  phonetic_synthesizer_hi.h  phonetic_synthesizer_kn.c  phonetic_synthesizer_kn.h  phonetic_synthesizer_ml.c  phonetic_synthesizer_ml.h  phonetic_synthesizer_mr.c  phonetic_synthesizer_mr.h  phonetic_synthesizer_or.c  phonetic_synthesizer_pa.c  phonetic_synthesizer_pa.h  phonetic_synthesizer_ps.c  phonetic_synthesizer_ps.h  phonetic_synthesizer_ta.c  phonetic_synthesizer_te.c  soundtouch_utils.c  synthesizer.c  synthesizer.h
src/soundtouch4c/: Makefile.in
src/soundtouch4c/src/: soundtouch4c.cpp  soundtouch4c.h
tdemos/: Gujrati  Malayalam  Oriya  Punjabi  Telugu
(+396 files in other folders)
