bin_PROGRAMS = dhvani
dhvani_INCLUDES = -I/.
dhvani_LDADD = -lasound -lm ../gsm/lib/*.o
dhvani_DESTDIR  = ../bin/
dhvani_TARGET   = ../bin/dhvani
dhvani_SOURCES = \
	dhvani.c \
	dhvani.h \
	languages.c \
	languages.h \
	phonetic_synthesizer_ml.c  \
	phonetic_synthesizer_ml.h  \
	phonetic_synthesizer_ka.c  \
	phonetic_synthesizer_ka.h  \
	phonetic_synthesizer_hi.c  \
	phonetic_synthesizer_hi.h  \
	phonetic_synthesizer_gu.c  \
	phonetic_synthesizer_gu.h  \
	phonetic_synthesizer_or.c  \
	phonetic_synthesizer_or.h  \
	phonetic_synthesizer_te.c  \
	phonetic_synthesizer_te.h  \
	phonetic_synthesizer_pa.c  \
	phonetic_synthesizer_pa.h  \
	phonetic_synthesizer_bn.c  \
	phonetic_synthesizer_bn.h  \
	synthesizer.c \
	synthesizer.h 

